# VaccumCleanerSimulator

./: .gitignore  CMakeLists.txt  readme.md  summary.csv
208150953_B/: 208150953_B.cpp  208150953_B.hpp
EX1/: CleaningAlgorithm.cpp  CleaningAlgorithm.h  House.cpp  House.h  VaccumCleaner.cpp  VaccumCleaner.h  bonus.txt  file.txt  index.cpp  index.h  input_a.txt  input_b.txt  input_c.txt  makefile  myrobot  out  output_input_a.txt  output_input_b.txt  output_input_c.txt  result.txt  unl.py
EX2/: AlgoUtils.cpp  AlgoUtils.h  AlgoUtils.hpp  (+55 more)
EX3/: CMakeLists.txt  MyAlgorithm.cpp  SimulationManager.cpp  SimulationManager.hpp  Simulator.cpp  Simulator.hpp  WallsSensorObject.hpp  bonus.txt  index.cpp  index.hpp  input_a.txt  log_input_a.txt  makefile  output_input_a.txt  output_input_c.txt  readme.md  summary.csv
EX3/208150953_A/: 208150953_A.cpp  208150953_A.hpp
EX3/208150953_B/: 208150953_B.cpp
EX3/algorithem1/: 208150953_A.hpp
EX3/algorithem2/: 208150953_B.hpp
EX3/algorithm/: AlgorithmRegistration.h
EX3/common/: HouseMap.h  abstract_algorithm.hpp  enums.hpp  structs.hpp  wall_sensor.hpp
EX3/houses/: input_e.house
EX3/logs/: input_a-_208150953_A.txt  input_a-_208150953_B.txt  input_b-_208150953_B.txt  input_c-_208150953_A.txt  input_c-_208150953_B.txt  input_d-_208150953_A.txt  input_d-_208150953_B.txt  input_e-_208150953_B.txt  input_f-_208150953_B.txt
EX3/myrobot.dSYM/Contents/: Info.plist
EX3/outputs/: input_a-_208150953_B.txt  input_b-_208150953_B.txt  input_c-_208150953_B.txt  input_d-_208150953_B.txt  input_e-_208150953_B.txt  input_f-_208150953_B.txt
EX3/simulator/: HouseMap.cpp  SimulationManager.cpp  SimulationManager.hpp  Simulator.cpp  Simulator.hpp  Task.cpp  Task.hpp  index.cpp  index.hpp
(+29 files in other folders)
